--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
 
 
       <a class="main-logo" href="index.html">
-        <span class="visually-hidden">Логотип Седоны</span>
+        <img class="main-logo-img" src="images/sedona-logo.svg" width="138" height="64" alt="Логотип Седоны">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
