--- a/index.html
+++ b/index.html
@@ -4,41 +4,40 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
-
+    <div class="container">
     <header class="page-header" data-test="header">
 
 
-      <a class="main-logo" href="index.html">
-        <img class="main-logo-img" src="images/sedona-logo.svg" width="138" height="64" alt="Логотип Седоны">
-      </a>
       <nav class="navigation">
-        <ul class="navigation-list">
+        <a class="main-logo" href="index.html">
+          <img class="main-logo-img" src="images/sedona-logo.svg" width="138" height="64" alt="Логотип Седоны">
+        </a>
+
+        <ul class="list navigation-list">
+
           <li class="navigation-item">
-            <a class="navigation-link" href="#" aria-current="page" >Главная</a>
+            <a class="link navigation-link" href="#" aria-current="page" >Главная</a>
           </li>
 
           <li class="navigation-item">
-            <a class="navigation-link" href="#" >О Седоне</a>
+            <a class="link navigation-link" href="#" >О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html" >Гостиницы</a>
+            <a class="link navigation-link" href="catalog.html" >Гостиницы</a>
           </li>
         </ul>
 
-        <ul class="navigation-list navigation-user">
+        <ul class="list navigation-list navigation-user">
           <li class="navigation-user-item">
-            <a class="navigation-link" href="#">
+            <a class="link navigation-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
 
           <li class="navigation-user-item">
-            <a class="navigation-link" href="#">
+            <a class="link navigation-link" href="#">
                   <span class="visually-hidden">Избранное</span>
                   12
             </a>
@@ -54,59 +53,68 @@
 
     </header>
 
-    <main class="main-index" data-test="main">
+    <main class="main-container main-index" data-test="main">
       <section class="section-welcome-sedona" data-test="hero">
         <div class="hero">
-          <img class="hero-img" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седона">
+          <img class="block-img hero-img" src="images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
         </div>
-        <h2 class="hero-header">Седона — небольшой городок в Аризоне,
+        <h2 class="header hero-header">Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h2>
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
       <section class="advantages" data-test="advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list">
-          <li class="advantages-item advantage-primary">
-            <h3 class="advantage-header">Настоящий городок</h3>
-            <p class="advantage-text">
-              Седона — не аттракцион
-              для туристов, там течёт своя
-              жизнь
-            </p>
-            <img src="images/advantages/photo-1.jpg" width="800" height="385" alt="Вид в Седоне">
+        <ul class="list advantages-list">
+          <li class="advantage-primary">
+            <div class="advantages-container">
+              <div class="advantages-item">
+                <h3 class="header advantage-header">Настоящий городок</h3>
+                <p class="advantage-text">
+                  Седона — не аттракцион
+                  для туристов, там течёт своя
+                  жизнь
+                </p>
+              </div>
+              <img class="block-img" src="images/advantages/photo-1.jpg" width="800" height="385" alt="Вид в Седоне">
+            </div>
           </li>
 
-          <li class="advantages-item advantage-secondary-1">
-            <h3 class="advantage-header">Небольшая площадь</h3>
-            <p class="advantage-text">Все достопримечательности находятся очень близко</p>
-          </li>
+          <div class="advantages-container">
+            <li class="advantages-item advantage-secondary-1">
+              <h3 class="header advantage-header">Небольшая площадь</h3>
+              <p class="advantage-text">Все достопримечательности находятся очень близко</p>
+            </li>
 
-          <li class="advantages-item advantage-secondary-2">
-            <h3 class="advantage-header">Красивая дорога</h3>
-            <p class="advantage-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
+            <li class="advantages-item advantage-secondary-2">
+              <h3 class="header advantage-header">Красивая дорога</h3>
+              <p class="advantage-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
 
-          <li class="advantages-item advantage-secondary-1">
-            <h3 class="advantage-header">Мало
-              туристов</h3>
-            <p class="advantage-text">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
+            <li class="advantages-item advantage-secondary-1">
+              <h3 class="header advantage-header">Мало
+                туристов</h3>
+              <p class="advantage-text">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
 
+          </div>
 
-          <li class="advantages-item advantage-primary">
-            <img src="images/advantages/photo-2.jpg" width="800" height="385" alt="Мост дьявола">
-            <h3 class="advantage-header">
-              Там есть мост дьявола</h3>
-            <p class="advantage-text">
-              Да, по нему можно пройти! Если вы осмелитесь, разумеется
-            </p>
-          </li>
+            <li class="advantage-primary">
+              <div class="advantages-container">
+                <img class="block-img" src="images/advantages/photo-2.jpg" width="800" height="385" alt="Мост дьявола">
+                <div>
+                  <h3 class="header advantage-header">
+                    Там есть мост дьявола</h3>
+                  <p class="advantage-text">
+                    Да, по нему можно пройти! Если вы осмелитесь, разумеется
+                  </p>
+                </div>
+              </div>
+            </li>
 
         </ul>
       </section>
       <section class="sedona-invitation">
-        <h2>
+        <h2 class="header sedona-invitation-header">
           Приезжайте в Седону отдохнуть в комфорте и уюте!
         </h2>
         <p>Опытный персонал и качественное обслуживание!</p>
@@ -115,9 +123,9 @@
 
       <section class="sedona-hotel-options">
         <h2 class="visually-hidden">Опции в гостиницах</h2>
-        <ul class="hotel-options-list">
+        <ul class="list hotel-options-list">
           <li class="hotel-options-item hotel-option-primary house-img">
-            <h3 class="hotel-option-header">Жилье</h3>
+            <h3 class="header hotel-option-header">Жилье</h3>
             <p class="hotel-option-description">
               Рекомендуем пожить
               в настоящем мотеле,
@@ -125,14 +133,14 @@
             </p>
           </li>
           <li class="hotel-options-item hotel-option-secondary food-img">
-            <h3 class="hotel-option-header">Еда</h3>
+            <h3 class="header hotel-option-header">Еда</h3>
             <p class="hotel-option-description">
               Всегда заказывайте
               топовый фирменный бургер,
               вы не разочаруетесь!</p>
           </li>
           <li class="hotel-options-item hotel-option-primary gift-img">
-            <h3 class="hotel-option-header">Сувениры</h3>
+            <h3 class="header hotel-option-header">Сувениры</h3>
             <p class="hotel-option-description">
               Не только китайского,
               но и настоящего местного
@@ -144,7 +152,7 @@
       </section>
 
       <section class="hotel-search-invite" data-test="search">
-        <h2 class="hotel-search-header">Заинтересовались?</h2>
+        <h2 class="header hotel-search-header">Заинтересовались?</h2>
         <p class="hotel-search-text">
           Укажите предполагаемые даты поездки
           и мы покажем вам лучшие предложения гостиниц в Седоне
@@ -159,48 +167,52 @@
     <footer class="page-footer" data-test="footer">
 
       <form class="footer-subscription-form subscription-main" action="https://echo.htmlacademy.ru/" method="post"  data-test="subscribe">
-        <h2 class="subscription-header">Подпишитесь на рассылку</h2>
+        <h2 class="header subscription-header">Подпишитесь на рассылку</h2>
         <p class="subscription-text">
           Только полезная информация и никакого спама,
           честное бойскаутское!
         </p>
 
         <label class="visually-hidden" for="email">Email</label>
-        <input class="subscription-email-field" id="email" name="email" type="email" placeholder="Ваш e-mail" required>
+        <input class="input subscription-email-field" id="email" name="email" type="email" placeholder="Ваш e-mail" required>
         <button class="button button-secondary" type="submit">Подписаться</button>
       </form>
 
 
-      <ul class="social-list">
-        <li class="social-item">
-          <a class="social-link" href="https://vk.com/htmlacademy">
-            <img src="images/social-networks/vk.svg" alt="Перейти на страницу вконтакте">
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="https://t.me/htmlacademy ">
-            <img src="images/social-networks/telegram.svg" alt="Перейти на telegram канал">
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
-            <img src="images/social-networks/youtube.svg" alt="Перейти на YouTube канал">
-          </a>
-        </li>
-      </ul>
+      <div class="footer-container">
 
-      <address class="footer-contacts">
-        <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </address>
-      <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="images/htmlacademy.svg" alt="HTMLAcademy">
-      </a>
+        <ul class="list social-list">
+          <li class="social-item">
+            <a class="link social-link" href="https://vk.com/htmlacademy">
+              <img src="images/social-networks/vk.svg" alt="Перейти на страницу вконтакте">
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="link social-link" href="https://t.me/htmlacademy ">
+              <img src="images/social-networks/telegram.svg" alt="Перейти на telegram канал">
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="link social-link" href="https://www.youtube.com/user/htmlacademyru">
+              <img src="images/social-networks/youtube.svg" alt="Перейти на YouTube канал">
+            </a>
+          </li>
+        </ul>
+
+        <address class="footer-contacts">
+          <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </address>
+        <a class="link html-academy-link" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="images/htmlacademy.svg" alt="HTMLAcademy">
+        </a>
+
+      </div>
 
     </footer>
 
 
 
 
-
+    </div>
   </body>
 </html>
